# cortex-m33-bare-metal

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: device.rs  test_on_host.rs
src/: allocator.rs  lib.rs  macros.rs  main.rs
