[package]
authors = ["junkang <yuanjunkang@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "cortex-m33-bare-metal"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-abort = "0.3.2"
panic-semihosting = { version = "0.6.0", features = ["exit"] }
panic-halt = "1.0.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
embedded-alloc = "0.6.0"

oorandom = "11.1.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv8m.main-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "cortex-m33-bare-metal"
test = false
bench = false

[profile.dev]

[profile.dev.package.cortex-m]

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
